2011-03-16  Emanuel Schuetze <emanuel@intevation.de>

	* website/*: Fix typos.

2011-03-16  Emanuel Schuetze <emanuel@intevation.de>

	* website/*: Fix typos. Add missing background image. Add new
	sponsor.

2011-03-15  Emanuel Schuetze <emanuel@intevation.de>

	* website/*: Redesign website and update for gpg4win 2.1.0 release.

	* logo/gpg4win-logo_fresh.png, logo/gpg4win-logo_fresh.svg: New
	fresh gpg4win logo.

2011-03-02  Emanuel Schuetze <emanuel@intevation.de>

	*  README.de.txt, README.en.txt: Update for 2.1.0

2011-02-07  Emanuel Schuetze <emanuel@intevation.de>

	* website/donate.htm4, website/donate-de.htm4: Add new sponsor.

2011-02-04  Emanuel Schuetze <emanuel@intevation.de>

	*  README.de.txt, README.en.txt: Update for 2.1.0-rc2

	*  website/index.htm4, website/index-de.htm4,
	website/download-de.htm4, website/download.htm4,
	website/template_header.m4: Update website for 2.1.0-rc2.

2011-01-11  Emanuel Schuetze <emanuel@intevation.de>

	* website/donate.htm4, website/donate-de.htm4: Add new sponsor.
	 
	* website/index.htm4, website/index-de.htm4: Restructure index page.

2010-12-20  Emanuel Schuetze <emanuel@intevation.de>

	* README.de.txt, README.en.txt: Update for next release.

	* HOWTO-SMIME.de.txt: Fix typo.

	* website/index.htm4, website/index-de.htm4,
	  website/newsarchive.htm4, website/newsarchive-de.htm4,
	  website/download.htm4, website/download-de.htm4,
	  website/template_header.m4: Update website to 2.1.0-rc1 release.

	* manual/gpg4win-compendium-de.tex, manual/gpg4win-compendium-en.tex:
	Add link to English/German HTML-title-page. Fix typo.

2010-12-17  Emanuel Schuetze <emanuel@intevation.de>

	* HOWTO-SMIME.en.txt: Translate HOWTO into English.

2010-12-15  Emanuel Schuetze <emanuel@intevation.de>

	* website/donate.htm4, website/donate-de.htm4: Add new sponsor.

2010-12-14  Emanuel Schuetze <emanuel@intevation.de>

	* website/donate.htm4, website/donate-de.htm4: Add new sponsors.
