@@ -21,9 +21,9 @@ community and <a href="contribute.html">contribute to Gpg4win</a>.</p>
 contracts by the following companies:</p>
 <ul>
 <li><a href="http://www.intevation.net">Intevation GmbH</a>
-(Projekt coordination, QA, Compendium)</li>
+(Project coordination, QA, Compendium)</li>
 <li><a href="http://www.g10code.com">g10 Code GmbH</a> 
-(Crypto Funktionality, GpgOL, GpgEX, GPA)</li>
+(Crypto Functionality, GpgOL, GpgEX, GPA)</li>
 <li><a href="http://www.kdab.com">KDAB</a> (Kleopatra)</li>
 </ul>
 
