@@ -1,3 +1,7 @@
+2011-03-18  Emanuel Schuetze <emanuel@intevation.de>
+
+	* website/gpg4win.css: Fix typo and layout issues.
+
 2011-03-16  Emanuel Schuetze <emanuel@intevation.de>
 
 	* website/*: Fix typos.
